--- a/neko/test/build.xml
+++ b/neko/test/build.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="core" default="help">
+<project name="NekoTests" default="help">
 
     <!-- The local.properties file is created and updated by the 'android' tool.
          It contains the path to the SDK. It should *NOT* be checked into
          Version Control Systems. -->
-    <property file="local.properties" />
+    <loadproperties srcFile="local.properties" />
 
     <!-- The ant.properties file can be created by you. It is only edited by the
          'android' tool to add properties to it.
@@ -41,9 +41,10 @@
 
     <!-- quick check on sdk.dir -->
     <fail
-            message="sdk.dir is missing. Make sure to generate local.properties using 'android update project' or to inject it through an env var"
+            message="sdk.dir is missing. Make sure to generate local.properties using 'android update project'"
             unless="sdk.dir"
     />
+
 
 <!-- extension targets. Uncomment the ones where you want to do custom work
      in between standard targets -->
@@ -59,6 +60,8 @@
     <target name="-post-compile">
     </target>
 -->
+
+    <import file="../build-support/clojure.xml" />
 
     <!-- Import the actual build file.
 
@@ -79,7 +82,6 @@
          in order to avoid having your file be overridden by tools such as "android update project"
     -->
     <!-- version-tag: custom -->
-    <import file="./neko/build-support/clojure.xml" />
     <import file="${sdk.dir}/tools/ant/build.xml" />
 
 </project>
